fix: height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 section {
-	@apply h-[100vh];
+	@apply min-h-[100vh];
 	@apply md:w-[60%] md:mx-auto pt-5 md:pt-40;
 	@apply px-5 md:px-0;
 	font-family: "Montserrat", "Open Sans", sans-serif;
